[project]
name = "ppo-penalty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brax>=0.12.4",
    "distrax>=0.1.5",
    "flashbax>=0.1.3",
    "flax>=0.10.7",
    "gymnax>=0.0.9",
    "jax>=0.6.2",
    "navix>=0.7.0",
    "optax>=0.2.5",
    "wandb>=0.21.1",
]
